## Process this file with automake to produce Makefile.in

SUBDIRS		= . src workloads tools import

dist_doc_DATA = \
	CONTRIBUTORS \
	LICENSE \
	NOTICE \
	README \
	change.log

EXTRA_DIST = \
	common.h2m \
	INSTALL \
	bootstrap.sh

notrans_dist_man7_MANS = polygraph.man

include $(top_srcdir)/common.am
